k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: billing-service
  labels:
    app: billing-service
spec:
  selector:
    app: billing-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
